[gd_scene load_steps=5 format=3 uid="uid://docl2c87fmkx"]

[ext_resource type="Script" path="res://scenes/starter.gd" id="1_5c8jf"]
[ext_resource type="Theme" uid="uid://di3mtk41gj5ie" path="res://assets/header_theme.tres" id="1_28cx7"]
[ext_resource type="Script" path="res://scenes/minimise_button.gd" id="2_24e5n"]
[ext_resource type="PackedScene" uid="uid://c7b7vk7visvsf" path="res://scenes/subscenes/quit_button.tscn" id="3_038cx"]

[node name="Starter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5c8jf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.454902)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="NiceLineAtTop" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
color = Color(0.756863, 0.360784, 0.101961, 1)

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_28cx7")

[node name="DraggableHeader" type="MarginContainer" parent="VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="VBoxContainer/Header/DraggableHeader"]
layout_mode = 2
size_flags_horizontal = 3
text = "Masria Games Launcher"

[node name="MinimiseButton" type="Button" parent="VBoxContainer/Header"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "_"
script = ExtResource("2_24e5n")

[node name="SettingsButton" type="Button" parent="VBoxContainer/Header"]
layout_mode = 2
disabled = true
text = "Settings"

[node name="QuitButton" parent="VBoxContainer/Header" instance=ExtResource("3_038cx")]
layout_mode = 2

[node name="HeaderSeparation" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
color = Color(0.756863, 0.360784, 0.101961, 1)

[node name="BodyMargin" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="WhatIsGoingOnLabel" type="Label" parent="VBoxContainer/BodyMargin"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 28
text = "Loading..."
horizontal_alignment = 1

[connection signal="gui_input" from="VBoxContainer/Header/DraggableHeader" to="." method="_on_draggable_header_gui_input"]
[connection signal="pressed" from="VBoxContainer/Header/MinimiseButton" to="VBoxContainer/Header/MinimiseButton" method="_on_pressed"]
